# MedStation-MedGemma_Impact

./: .bandit.yml  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .precommit_allowlist_large_files.txt  ARCHIVE_RESTORE.md  AUTH_WIRING_COMPLETE.md  BACKEND_COMPLETE.md  CHAT_ROUTER_MIGRATION_PLAN.md  CODE_TAB_COMPLETE.md  CODE_TAB_HARDENING_COMPLETE.md  CRITICAL_BUGS_FOUND.md  DATABASE_WIRING_COMPLETE.md  DELIVERY_SUMMARY.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DIFF_SIZE_CAP_INSTRUCTIONS.md  FINAL_STATUS_REPORT.md  INDEX.md  INTEGRATION_STRATEGY.md  JARVIS_QUICK_REFERENCE.md  LICENSE  MEDGEMMA_SUBMISSION.md  MEDIUM_PRIORITY_ISSUES.md  Makefile  NETWORK_FIREWALL_FIX.md  PERFORMANCE_REPORT.md  PHASE1_COMPLETE.md  PHASE_0_COMPLETE.txt  PHASE_1_COMPLETE.txt  PROGRESS_REPORT.md  README.md  README_JARVIS_EXPLORATION.md  REFACTORING_TARGETS.md  RELEASE_NOTES.md  ROUTER_MIGRATION_STATUS.md  SECURITY_FIXES.md  SECURITY_TESTING_GUIDE.md  SESSION_R5_R7_COMPLETE.md  (+34 more)
apps/backend/: .flake8  API_STANDARDS.md  CACHING.md  DATABASE_INDEXES.md  OBSERVABILITY.md  PERFORMANCE_IMPROVEMENTS.md  README.md  SETUP.md  TESTING.md  add_database_indexes.py  backend_requirements.txt  dev_backend.sh  locustfile.py  pyproject.toml  pytest.ini  redshift_sql_processor.py  refactor_routes.py  requirements.txt  setup_dev.sh  sql_validator.py  test_performance_simple.py  test_terminal_bridge.py  validate_metal4.py  web_requirements.txt
apps/backend/api/: METAL4_ML_README.md  __init__.py  accessibility_service.py  adaptive_router.py  adaptive_router_patterns.py  admin_service.py  ane_context_engine.py  ane_router.py  app_factory.py  audit_actions.py  audit_helper.py  audit_logger.py  auth_bootstrap.py  auth_middleware.py  auth_routes.py  auth_types.py  automation_router.py  automation_storage.py  background_jobs.py  backup_router.py  backup_service.py  backup_types.py  bash_intelligence.py  bash_patterns.py  cache_service.py  chat_enhancements.py  chat_memory.py  chat_service.py  code_editor_service.py  code_editor_service.py.bak  code_operations.py  collab_ws.py  config.py  config_paths.py  context_api.py  context_router.py  context_types.py  data_engine.py  database_router.py  db_consolidation_migration.py  (+164 more)
apps/backend/continue_core/: .eslintrc.json  tsconfig.json
apps/backend/redshift_sql_processor/: __init__.py  constants.py  core.py  utils.py
apps/backend/services/: terminal_bridge.py
apps/backend/tests/: __init__.py  conftest.py  test_admin_routes.py  test_admin_support.py  test_agent_routing_learning.py  test_agent_sessions.py  test_agent_workflow_integration.py  test_ane_context_engine.py  test_api_integration.py  test_audit_events.py  test_audit_helper.py  test_audit_logger.py  test_audit_logger_unit.py  test_auth_bootstrap.py  test_auth_middleware.py  test_auth_middleware_unit.py  test_auth_migrations.py  test_auth_routes.py  test_auth_update_safety.py  test_automation_router.py  test_automation_storage.py  test_cache_service.py  test_cloud_auth.py  test_cloud_oauth.py  test_cloud_storage.py  test_cloud_storage_s3.py  test_cloud_sync.py  test_code_editor_service.py  test_code_operations.py  test_codex_engine.py  test_collab_ws.py  test_config.py  test_config_paths.py  test_connection_code_rate_limiter.py  test_context_router.py  (+82 more)
(+2032 files in other folders)
