[project]
name = "elohimos-backend"
version = "0.1.0"
description = "ElohimOS - AI-powered data processing platform"
authors = [{name = "MagnetarAI, LLC"}]
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = "(artifacts|tmp|\\.venv|venv|ENV|env|build|dist)"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["artifacts", "tmp", ".venv", "venv", "ENV", "env", "build", "dist"]

[tool.ruff.lint]
# Keep the codebase working as-is; suppress noisy rules for now.
extend-ignore = ["F401", "F403", "F405", "F841", "F821", "E722"]

[tool.ruff.lint.per-file-ignores]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203","E266","E501","W503","F403","F405","F401","F841"]
