[project]
name = "elohimos-backend"
version = "0.1.0"
description = "ElohimOS - AI-powered data processing platform"
authors = [{name = "MagnetarAI, LLC"}]
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | artifacts
  | tmp
  | venv
  | ENV
  | env
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "artifacts",
    "tmp",
    "ENV",
    "env",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# Ignore specific rules (merged from both configs)
ignore = [
    "E501",   # line too long (handled by black)
    "E722",   # bare except (legacy code)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from exception
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "F401",   # unused imports (common in __init__.py)
    "F403",   # star imports
    "F405",   # import from star
    "F841",   # unused variable
    "F821",   # undefined name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203","E266","E501","W503","F403","F405","F401","F841"]
